# aurclips

./: .gitattributes  .gitignore  CONTEXT.md  Makefile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  setup.ps1  setup.sh
.github/workflows/: ci.yml  publish.yml
aurclips/: __init__.py  __main__.py  clipper.py  config.py  heuristics.py  ingest.py  marks.py  notify.py  player.py  render.py  runner.py  safety.py  select_clips.py  state.py  stats.py  subtitles.py  titles.py  transcribe.py  upload.py
aurclips/assets/: config.default.yaml
docs/: config.md  grabar-en-beats.md  pipeline.md  upload-youtube.md
docs/adr/: 0001-extremos-apretados-centro-simple.md  0002-recortador-en-la-puerta-publicador-dentro.md  0003-rutas-checkout-y-usuario.md
packaging/: README.md  crontab.example
packaging/launchd/: com.aurclips.daily.plist
packaging/systemd/: aurclips.service  aurclips.timer
tests/: test_binaries.py  test_clipper.py  test_config_paths.py  test_defaults.py  test_fonts.py  test_gpu.py  test_idempotencia.py  test_ingest_url.py  test_mark_session.py  test_marks.py  test_metadata.py  test_observabilidad.py  test_player.py  test_render.py  test_resiliencia.py  test_runner.py  test_safety.py  test_select_clips.py  test_state.py  test_stats.py  test_transcribe_cache.py
